API gateway and fixes